--- a/docs/.overrides/partials/toc-item.html
+++ b/docs/.overrides/partials/toc-item.html
@@ -1,6 +1,8 @@
 <li class="md-nav__item">
   <a class="md-nav__link" href="{{ toc_item.url }}">
-    <span class="md-ellipsis">{{ toc_item.title }}</span>
+    <span class="md-ellipsis">
+      {{ toc_item.title }}
+    </span>
   </a>
 
   {% if toc_item.children and (not page.meta.toc_depth or toc_item.level <= page.meta.toc_depth) %}
