--- a/docs/assets/stylesheets/textcase.css
+++ b/docs/assets/stylesheets/textcase.css
@@ -1,3 +1,11 @@
+.md-typeset__table {
+  min-width: 100%;
+}
+
+.md-typeset table:not([class]) {
+  display: table;
+}
+
 .md-emoji-list .twemoji {
   --md-icon-size: 1.5em;
 }
